# gitlab_pipeline_annoyer

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pipeline.json
.github/workflows/: build.yml
src/: main.rs
