[package]
name = "gitlab_pipeline_annoyer"
version = "0.1.0"
edition = "2021"

[dependencies]
gitlab = "0.1408.0"
axum = { version = "0.4.8", features = ["headers", "http2", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
serde = "1.0.136"
slack_api = { git = "https://github.com/puzza007/slack-rs-api.git" }
reqwest = "0.11.10"